@@ -1,4 +1,11 @@
-FROM adoptopenjdk/openjdk11 as build
+
+FROM openjdk:11-slim AS build
+RUN ["jlink", "--compress=2", "--strip-debug", "--no-header-files", \
+     "--add-modules", "java.base,java.logging,java.sql,java.desktop,java.management,java.naming,jdk.unsupported", \
+     "--output", "/var/tmp/jre"]
+RUN [ "apt", "update"]
+RUN [ "apt-get", "install", "-y", "binutils"]
+RUN ["strip", "-p", "--strip-unneeded", "/var/tmp/jre/lib/server/libjvm.so"]
 RUN mkdir /opt/app
 WORKDIR /opt/app
 COPY build.gradle settings.gradle gradlew ./
@@ -8,11 +15,12 @@ RUN ./gradlew build || return 0
 COPY src ./src
 RUN ./gradlew assemble
 
-FROM adoptopenjdk/openjdk11
-RUN mkdir /opt/app
-WORKDIR /opt/app
-COPY --from=build /opt/app/build/libs/app.jar ./
-COPY --from=build /opt/app/build/libs/libs ./libs
+FROM debian:sid-slim
+COPY --from=build /var/tmp/jre /opt/jre
+ENV PATH=$PATH:/opt/jre/bin
+RUN mkdir /app
+COPY --from=build /opt/app/build/libs/libs /app/libs
+COPY --from=build /opt/app/build/libs/app.jar /app
 
 EXPOSE 8080
-CMD ["java", "-jar", "/opt/app/app.jar"]
+CMD ["java", "-jar", "/app/app.jar"]
